testsuite/tests/grammar/invalid_unparser/test.out
== ambiguous-lists.lkt ==
error: Inconsistent separation token for FooNode.list: , and <none>

== pick-in-list.lkt ==
pick-in-list.lkt:5:29: error: Unparsers generation require list parsers to directly build nodes for each list item
5 |     @main_rule main_rule <- list+("example" Root(or(


== pick-in-or.lkt ==
pick-in-or.lkt:6:9: error: Unsupported token node parser for unparsers generation, only direct token parsers are accepted: Extract(Row(Token(<WithText Example>), Transform(Row(Token(<WithSymbol Identifier>)), Identifier)), 1)
6 |         pick("example" Identifier(@identifier))
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== several-1.lkt ==
several-1.lkt:6:9: error: Unsupported token node parser for unparsers generation, only direct token parsers are accepted: Transform(Row(Or(Token(<WithSymbol Identifier>), Token(<WithText Example>))), Identifier)
6 |         Identifier(or(@identifier | @example))
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== several-2.lkt ==
several-2.lkt:7:11: error: The Identifier token node can be associated to only one token kind: here we have Example, but we already had Identifier
7 |         | Identifier(@example)
  |           ^^^^^^^^^^^^^^^^^^^^


== toplevel-pick.lkt ==
toplevel-pick.lkt:5:29: error: Top-level information loss prevents unparsers generation
5 |     @main_rule main_rule <- pick("example" Root(item))
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^


Done
